--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -2,6 +2,9 @@
 name = "axum-codec-macros"
 version = "0.0.1"
 edition = "2021"
+description = "Procedural macros for axum-codec"
+license = "MIT OR Apache-2.0"
+authors = ["Matthew Polak <contact@matteopolak.com>"]
 
 [lib]
 proc-macro = true
