ci: rerun when readme is modified

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
       - '**.yml'
       - '.git*'
       - 'Cargo.lock'
+      - 'README.md' # it's included in the crate root
     branches:
       - main
 
