--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "axum-codec"
-version = "0.0.3"
+version = "0.0.4"
 edition = "2021"
 description = "A multi-codec extractor and response writer for Axum"
 license = "MIT OR Apache-2.0"
@@ -13,7 +13,7 @@ members = ["macros", "."]
 [dependencies]
 aide = { version = "0.13", optional = true, default-features = false, features = ["axum"] }
 axum = { version = "0.7", default-features = false }
-axum-codec-macros = { path = "macros", version = "0.0.3", optional = true }
+axum-codec-macros = { path = "macros", version = "0.0.4", optional = true }
 bincode = { version = "2.0.0-rc.3", default-features = false, features = ["std"], optional = true }
 bitcode = { version = "0.6", default-features = false, optional = true }
 mime = "0.3"
@@ -34,6 +34,8 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 axum-codec = { path = ".", features = ["full-codecs", "macros", "aide", "validator"] }
 bitcode = "0.6"
 bincode = "2.0.0-rc.3"
+schemars = { version = "0.8", features = ["derive"] }
+validator = "0.18"
 
 [features]
 default = ["json", "macros"]
