--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ axum = { version = "0.7", default-features = false }
 axum-codec-macros = { path = "macros", version = "0.0.4", optional = true }
 bincode = { version = "2.0.0-rc.3", default-features = false, features = ["std"], optional = true }
 bitcode = { version = "0.6", default-features = false, optional = true }
+ciborium = { version = "0.2", optional = true }
 mime = "0.3"
 paste = "1"
 rmp-serde = { version= "1", optional = true }
@@ -38,7 +39,7 @@ bitcode = "0.6"
 default = ["json", "macros"]
 
 # Enables all codecs
-full-codecs = ["bincode", "bitcode", "json", "msgpack", "toml", "yaml"]
+full-codecs = ["bincode", "bitcode", "cbor", "json", "msgpack", "toml", "yaml"]
 macros = ["dep:axum-codec-macros", "schemars?/derive", "bincode?/derive", "bitcode?/derive", "serde?/derive", "validator?/derive"]
 
 # Enables support for {get,put,..}_with and relevant chaning methods
@@ -50,6 +51,7 @@ validator = ["dep:validator", "axum-codec-macros?/validator"]
 
 bincode = ["dep:bincode", "axum-codec-macros?/bincode"]
 bitcode = ["dep:bitcode", "axum-codec-macros?/bitcode"]
+cbor = ["dep:ciborium", "serde"]
 json = ["dep:serde_json", "serde"]
 msgpack = ["dep:rmp-serde", "serde"]
 toml = ["dep:toml", "serde"]
