--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ license = "MIT OR Apache-2.0"
 authors = ["Matthew Polak <contact@matteopolak.com>"]
 repository = "https://github.com/matteopolak/axum-codec"
 
+[package.metadata.docs.rs]
+all-features = true
+
 [workspace]
 members = ["macros", ".", "examples/*"]
 
