--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "axum-codec"
-version = "0.0.10"
+version = "0.0.11"
 edition = "2021"
 description = "A multi-codec extractor and response writer for Axum"
 license = "MIT OR Apache-2.0"
@@ -16,9 +16,9 @@ members = ["macros", ".", "examples/*"]
 [dependencies]
 aide = { version = "0.13", optional = true, default-features = false, features = ["axum"] }
 axum = { version = "0.7", default-features = false }
-axum-codec-macros = { path = "macros", version = "0.0.7" }
+axum-codec-macros = { path = "macros", version = "0.0.8" }
 bincode = { version = "2.0.0-rc.3", default-features = false, features = ["std"], optional = true }
-bitcode = { version = "0.6", default-features = false, optional = true }
+bitcode = { version = "0.6.3", default-features = false, features = ["std"], optional = true }
 ciborium = { version = "0.2", optional = true }
 mime = "0.3"
 rmp-serde = { version= "1", optional = true }
