--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,22 @@
 hard_tabs = true
+tab_spaces = 2
+newline_style = "Unix"
+
+group_imports = "StdExternalCrate"
+imports_granularity = "Crate"
+
+format_code_in_doc_comments = true
+format_macro_matchers = true
+format_strings = true
+hex_literal_case = "Lower"
+use_field_init_shorthand = true
+condense_wildcard_suffixes = true
+
+normalize_comments = true
+normalize_doc_attributes = true
+overflow_delimited_expr = true
+wrap_comments = true
+
+reorder_impl_items = true
 reorder_imports = true
 
