feat: add #[axum_codec::debug_handler]

--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -16,6 +16,9 @@ quote = "1"
 syn = { version = "2", optional = true }
 
 [features]
+default = ["debug"]
+
+debug = []
 bincode = ["dep:syn"]
 bitcode = ["dep:syn"]
 serde = ["dep:syn"]
