--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "axum-codec-macros"
-version = "0.0.9"
+version = "0.0.10"
 edition = "2021"
 description = "Procedural macros for axum-codec"
 license = "MIT OR Apache-2.0"
@@ -13,12 +13,12 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1"
 quote = "1"
-syn = { version = "2", optional = true, features = ["extra-traits"] }
+syn = { version = "2", optional = true, features = ["full", "extra-traits"] }
 
 [features]
 default = ["debug"]
 
-debug = []
+debug = ["dep:syn"]
 bincode = ["dep:syn"]
 bitcode = ["dep:syn"]
 serde = ["dep:syn"]
